# $Id$

2006-01-05
	* Added draw_graph_borders option
	* Added XMMS/BMP InfoPipe plugin support

2006-01-01
	* Conky 1.3.5 released

2005-12-31
	* Fixed bug with use_xft causing ignorance of font selection (sf.net
	bug 1387564)
	* Fixed issue with parsing of hex values for colours

2005-12-30
	* Added BMPx (http://beep-media-player.org/) support

2005-12-14
	* Fixed issues with execi stuff

2005-12-10
	* Added sf.net patch 1374576

2005-12-05
	* Fixed sf.net bug 1367745

2005-11-30
	* Fixed sf.net bugs 1369607, 1367735 and gentoo bug 113921, 
	  all variations of the same array out of bounds issue.
	* "Fixed" code in fs.c and conky.c to make fs stats match those displayed by df (affects reporting against ext3 filesystems only)

2005-11-27 
	* new code in linux.c and top.c to calculate CPU % correctly on 2.6 kernels.

2005-11-24
	* Fixed gentoo bug# 113219

2005-11-23
	* Added #define/#undef SIGNAL_BLOCKING in conky.c for experimenting
	with synchronous signal processing. set to #undef for previous behavior.
	* Use POSIX signal api's, not the ANSI signal().

2005-11-22
	* Fixed IP address bug (sf.net bug 1359055)

2005-11-16
	* Conky 1.3.4 released

2005-11-12
	* Replaced bitwise copy of tcp_connection_t with function
	copy_tcp_connection().
	* Changed call interfaces for get_acpi_fan(), get_acpi_ac_adapter(),   
	get_freq(), get_freq_dynamic(), get_adt746x_cpu(), get_adt746x_fan(),
	eliminating all mallocs.  pkovacs.  See bug 1355470.

2005-11-11
	* moved hash sizing code into portmon lib, where it belongs
	* More mem leaks fixed.

2005-11-10
	* Added config items min_port_monitors / min_port_monitor_connections

2005-11-09
	* Cleaned up top code, bug fixes
	* Fixed some memory leaks

2005-11-08
	* Fix bug# 1351686.  Patch by boojit.
	* Fixed 1331576 (I think) with bad cpu usage reporting

2005-11-01
	* Documentation updates for compiling and port monitoring
	* Removed cairo stuff (it's useless)

2005-10-31
	* Added statfs sf.net patch 1344493

2005-10-30