@@ -1,6 +1,6 @@
-AC_INIT([Conky],[1.3.6_CVS_20060105],[brenden1@users.sourceforge.net])
+AC_INIT([Conky],[1.3.6_CVS_20060106],[brenden1@users.sourceforge.net])
 
-AM_INIT_AUTOMAKE(conky, 1.3.6_CVS_20060105)
+AM_INIT_AUTOMAKE(conky, 1.3.6_CVS_20060106)
 AM_CONFIG_HEADER(src/config.h)
 AC_PROG_LIBTOOL
 
@@ -133,7 +133,7 @@ dnl
 
 want_infopipe=yes
 AC_ARG_ENABLE(infopipe,
-[  --enable-infopipe       enable if you want XMMS/BMP InfoPipe support [[default=no]]],
+[  --enable-infopipe       enable if you want XMMS/BMP InfoPipe support [[default=yes]]],
   [want_infopipe="$enableval"])
 
 AM_CONDITIONAL(BUILD_INFOPIPE, test x$want_infopipe = xyes)
