@@ -1,5 +1,9 @@
 # $Id$
 
+2006-01-06
+	* Fixed infopipe bug (select() affects timer as a side effect on
+	Linux!)
+
 2006-01-05
 	* Added draw_graph_borders option
 	* Added XMMS/BMP InfoPipe plugin support
